# ndk_project

./: CMakeLists.txt  README.md
NDK_01/: README.md  build.py  main.cpp  run.sh
NDK_01/include/: Mylog.h
NDK_01/jni/: Android.mk  Application.mk
NDK_01/src/: Mylog.cpp
NDK_02/: test.cpp
NDK_02/include/: MemoryTrace.h  Mymem.h  REDME.md
NDK_02/src/: Mymem.cpp
NDK_03/: README.md
NDK_03/opencv/: README.md  test.cpp
NDK_03/opencv/include/opencv2/: cvconfig.h
NDK_03/opencv/jni/: Android.mk
NDK_04/: CPU_core.cpp  CPU_core.h  Readme.md
log_tool/: log.sh  log.txt
